--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>dinhhieudata — Portfolio</title>
+  <title>Hieu Data Analyst — Portfolio</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -39,6 +39,38 @@
       <p class="view-more"><a href="projects.html">View all projects →</a></p>
     </section>
   </main>
+  
+ <!-- ADD PROJECT -->
+  
+  <section class="projects">
+  <div class="container">
+    <h2>Projects</h2>
+
+    <div class="project-grid">
+      <!-- Project 1 -->
+      <div class="project-card">
+        <h3>Netflix Data Analysis</h3>
+        <p>Exploratory data analysis on Netflix movies & TV shows using Python (Pandas, Matplotlib, Seaborn).</p>
+        <a href="https://github.com/dinhhieu1998/netflix-analysis" target="_blank">View Project →</a>
+      </div>
+
+      <!-- Project 2 -->
+      <div class="project-card">
+        <h3>COVID-19 Dashboard</h3>
+        <p>Interactive Power BI dashboard visualizing COVID-19 trends across countries and continents.</p>
+        <a href="https://github.com/dinhhieu1998/covid19-dashboard" target="_blank">View Project →</a>
+      </div>
+
+      <!-- Project 3 -->
+      <div class="project-card">
+        <h3>IMDb Movie Correlation Analysis</h3>
+        <p>Analyzing relationships between budget, score, and gross revenue using Python & SQL.</p>
+        <a href="https://github.com/dinhhieu1998/imdb-analysis" target="_blank">View Project →</a>
+      </div>
+    </div>
+  </div>
+</section>
+--------------
 
   <footer class="site-footer">
     <div class="container">
