--- a/index.html
+++ b/index.html
@@ -1,84 +1,63 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Hieu Data Analyst — Portfolio</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DH_DA | Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <header class="site-header">
-    <div class="container header-inner">
-      <h1 class="brand">dinhhieudata</h1>
-      <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="projects.html">Projects</a>
-        <a href="contact.html">Contact</a>
-      </nav>
+  <header>
+    <div class="container header-container">
+      <img src="profile.jpg" alt="Profile Photo" class="profile-pic">
+      <div>
+        <h1>Lê Đình Hiếu</h1>
+        <p>Data Analyst | Python | SQL | Power BI</p>
+        <div class="social-links">
+          <a href="mailto:dinhhieudata@gmail.com">Email</a> |
+          <a href="https://github.com/dinhhieu1998" target="_blank">GitHub</a> |
+          <a href="#" target="_blank">LinkedIn</a>
+        </div>
+      </div>
     </div>
   </header>
 
-  <main class="container">
-    <section class="hero">
-      <div class="hero-left">
-        <h2>Hi — I'm <strong>dinhhieudata</strong></h2>
-        <p class="lead">Data Analyst focused on turning data into actionable insights. Portfolio contains sample projects using Python, SQL and BI tools.</p>
-        <p class="cta-row"><a class="btn" href="projects.html">View Projects</a> <a class="btn ghost" href="contact.html">Contact</a></p>
-      </div>
-      <div class="hero-right">
-        <!-- SVG avatar placeholder -->
-        <img src="assets/images/avatar.svg" alt="avatar" class="avatar">
-      </div>
+  <main>
+    <section class="about container">
+      <h2>About Me</h2>
+      <p>Hello! I'm a data analyst passionate about turning data into actionable insights. 
+         I specialize in Python, SQL, and Power BI to build dashboards, automate workflows, 
+         and visualize data effectively.</p>
     </section>
 
-    <section class="projects-preview">
-      <h3>Featured Projects</h3>
-      <div id="project-grid" class="grid"></div>
-      <p class="view-more"><a href="projects.html">View all projects →</a></p>
+    <section class="projects container">
+      <h2>Projects</h2>
+
+      <div class="project-grid">
+        <div class="project-card">
+          <h3>Netflix Data Analysis</h3>
+          <p>EDA on Netflix movies & shows using Python (Pandas, Matplotlib, Seaborn).</p>
+          <a href="https://github.com/dinhhieu1998/netflix-analysis" target="_blank">View Project →</a>
+        </div>
+
+        <div class="project-card">
+          <h3>COVID-19 Dashboard</h3>
+          <p>Interactive Power BI dashboard visualizing COVID-19 trends worldwide.</p>
+          <a href="https://github.com/dinhhieu1998/covid19-dashboard" target="_blank">View Project →</a>
+        </div>
+
+        <div class="project-card">
+          <h3>IMDb Movie Correlation Analysis</h3>
+          <p>Analyzing relationships between budget, score, and gross revenue using Python & SQL.</p>
+          <a href="https://github.com/dinhhieu1998/imdb-analysis" target="_blank">View Project →</a>
+        </div>
+      </div>
     </section>
   </main>
-  
- <!-- ADD PROJECT -->
-  
-  <section class="projects">
-  <div class="container">
-    <h2>Projects</h2>
 
-    <div class="project-grid">
-      <!-- Project 1 -->
-      <div class="project-card">
-        <h3>Netflix Data Analysis</h3>
-        <p>Exploratory data analysis on Netflix movies & TV shows using Python (Pandas, Matplotlib, Seaborn).</p>
-        <a href="https://github.com/dinhhieu1998/netflix-analysis" target="_blank">View Project →</a>
-      </div>
-
-      <!-- Project 2 -->
-      <div class="project-card">
-        <h3>COVID-19 Dashboard</h3>
-        <p>Interactive Power BI dashboard visualizing COVID-19 trends across countries and continents.</p>
-        <a href="https://github.com/dinhhieu1998/covid19-dashboard" target="_blank">View Project →</a>
-      </div>
-
-      <!-- Project 3 -->
-      <div class="project-card">
-        <h3>IMDb Movie Correlation Analysis</h3>
-        <p>Analyzing relationships between budget, score, and gross revenue using Python & SQL.</p>
-        <a href="https://github.com/dinhhieu1998/imdb-analysis" target="_blank">View Project →</a>
-      </div>
-    </div>
-  </div>
-</section>
---------------
-
-  <footer class="site-footer">
-    <div class="container">
-      <p>© 2025 dinhhieudata — <a href="contact.html">Contact</a></p>
-    </div>
+  <footer>
+    <p>© 2025 dinhhieudata | Built with ❤️ using HTML & CSS</p>
   </footer>
-
-  <script src="assets/js/script.js"></script>
-  <script>document.documentElement.dataset.year = new Date().getFullYear();</script>
 </body>
 </html>
