--- a/index.html
+++ b/index.html
@@ -1,84 +1,151 @@
+<!DOCTYPE HTML>
+<!--
+	Massively by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Hieu Data Analyst</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Hieu Analyst — Portfolio</title>
-  <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-  <header class="site-header">
-    <div class="container header-inner">
-      <h1 class="brand">dinhhieudata</h1>
-      <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="projects.html">Projects</a>
-        <a href="contact.html">Contact</a>
-      </nav>
-    </div>
-  </header>
+		<!-- Wrapper -->
+			<div id="wrapper" class="fade-in">
 
-  <main class="container">
-    <section class="hero">
-      <div class="hero-left">
-        <h2>Hi — I'm <strong>dinhhieudata</strong></h2>
-        <p class="lead">Data Analyst focused on turning data into actionable insights. Portfolio contains sample projects using Python, SQL and BI tools.</p>
-        <p class="cta-row"><a class="btn" href="projects.html">View Projects</a> <a class="btn ghost" href="contact.html">Contact</a></p>
-      </div>
-      <div class="hero-right">
-        <!-- SVG avatar placeholder -->
-        <img src="assets/images/avatar.svg" alt="avatar" class="avatar">
-      </div>
-    </section>
+				<!-- Intro -->
+					<div id="intro">
+						<h1>LE DINH HIEU<br />
+						Portfolio</h1>
+						<p>Data Analyst well versed in SQL, Python, Tableau, Power BI <a href="https://www.youtube.com/channel/UC7cs8q-gJRlGwj4A8OmCmXg">@AlexTheAnalyst</a>
+						<ul class="actions">
+							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+						</ul>
+					</div>
 
-    <section class="projects-preview">
-      <h3>Featured Projects</h3>
-      <div id="project-grid" class="grid"></div>
-      <p class="view-more"><a href="projects.html">View all projects →</a></p>
-    </section>
-  </main>
-  
- <!-- ADD PROJECT -->
-  
-  <section class="projects">
-  <div class="container">
-    <h2>Projects</h2>
 
-    <div class="project-grid">
-      <!-- Project 1 -->
-      <div class="project-card">
-        <h3>Netflix Data Analysis</h3>
-        <p>Exploratory data analysis on Netflix movies & TV shows using Python (Pandas, Matplotlib, Seaborn).</p>
-        <a href="https://github.com/dinhhieu1998/netflix-analysis" target="_blank">View Project →</a>
-      </div>
+				<!-- Nav -->
+					<nav id="nav">
+						<ul class="links">
+							<li class="active"><a href="index.html">Projects</a></li>
 
-      <!-- Project 2 -->
-      <div class="project-card">
-        <h3>COVID-19 Dashboard</h3>
-        <p>Interactive Power BI dashboard visualizing COVID-19 trends across countries and continents.</p>
-        <a href="https://github.com/dinhhieu1998/covid19-dashboard" target="_blank">View Project →</a>
-      </div>
+						</ul>
+						<ul class="icons">
+							<li><a href="https://www.linkedin.com/in/hi%E1%BA%BFu-l%C3%AA-6b0509196/" class="icon brands fa-linkedin"><span class="label">fa-linkedin</span></a></li>
+							<li><a href="https://github.com/dinhhieu1998" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+						</ul>
+					</nav>
 
-      <!-- Project 3 -->
-      <div class="project-card">
-        <h3>IMDb Movie Correlation Analysis</h3>
-        <p>Analyzing relationships between budget, score, and gross revenue using Python & SQL.</p>
-        <a href="https://github.com/dinhhieu1998/imdb-analysis" target="_blank">View Project →</a>
-      </div>
-    </div>
-  </div>
-</section>
---------------
+				<!-- Main -->
+					<div id="main">
 
-  <footer class="site-footer">
-    <div class="container">
-      <p>© 2025 dinhhieudata — <a href="contact.html">Contact</a></p>
-    </div>
-  </footer>
+						<!-- Featured Post -->
+							<article class="post featured">
+								<header class="major">
+									<h2><a href="#">Data Cleaning<br />
+									in SQL</a></h2>
+									<p>In this project we take raw housing data and transform <br />
+									it in SQL Server to make it more usable for analysis.<br />
+									</p>
+								</header>
+								<a href="https://github.com/dinhhieu1998/PortfolioProjects/blob/main/Data%20Cleaning%20in%20SQL.sql" class="image main"><img src="images\covid19.png" alt="" /></a>
+								<ul class="actions special">
+									<li><a href="https://github.com/dinhhieu1998/PortfolioProjects/blob/main/Data%20Cleaning%20in%20SQL.sql" class="button large">View Project</a></li>
+								</ul>
+							</article>
 
-  <script src="assets/js/script.js"></script>
-  <script>document.documentElement.dataset.year = new Date().getFullYear();</script>
-</body>
+						<!-- Posts -->
+							<section class="posts">
+								<article>
+									<header>
+										<h2><a href="#">COVID 19<br />
+										Data Exploration</a></h2>
+									</header>
+									<a href="https://github.com/AlexTheAnalyst/PortfolioProjects/blob/main/COVID%20Portfolio%20Project%20-%20Data%20Exploration.sql" class="image fit"><img src="images\covid19.png" alt="" /></a>
+									<p>In this project we use SQL Server to explore global COVID 19 data. </p>
+									<ul class="actions special">
+										<li><a href="https://github.com/AlexTheAnalyst/PortfolioProjects/blob/main/COVID%20Portfolio%20Project%20-%20Data%20Exploration.sql" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="#">Tableau Dashboards<br />
+										</a></h2>
+									</header>
+									<a href="https://public.tableau.com/profile/alexander.freberg#!/?newProfile=&activeTab=0" class="image fit"><img src="images\covid19.png" alt="" /></a>
+									<p>Tableau Dashboards for projects on COVID 19, Financial Forecasting, and Fantasy Football </p>
+									<ul class="actions special">
+										<li><a href="https://public.tableau.com/profile/alexander.freberg#!/?newProfile=&activeTab=0" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="#">Movie Correlation<br />
+										with Python</a></h2>
+									</header>
+									<a href="github link here" class="image fit"><img src="images\covid19.png" alt="" /></a>
+									<p>In this project we look at what variables effect the gross revenue from movies.</p>
+									<ul class="actions special">
+										<li><a href="github link here" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="#">Amazon Web Scraper<br />
+										with Python</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images\covid19.png" alt="" /></a>
+									<p>In this project we scrape data from Amazon to analyze price data for products.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">View Project</a></li>
+									</ul>
+								</article>
+								
+
+				<!-- Footer -->
+					<footer id="footer">
+
+						<section class="split contact">
+							<section class="alt">
+								<h3>Address</h3>
+								<p><a href="#">82 Ninh Ton, Lien Chieu, Da Nang</a></p>
+							</section>
+							<section>
+								<h3>Phone</h3>
+								<p><a href="#">(84) 357 069 934</a></p>
+							</section>
+							<section>
+								<h3>Email</h3>
+								<p><a href="#">dinhhieu.roca@gmail.com</a></p>
+							</section>
+							<section>
+								<h3>Social</h3>
+								<ul class="icons alt">
+									<li><a href="https://www.facebook.com/ledinhhieu.roca" class="icon brands fa-linkedin"><span class="label">fa-linkedin</span></a></li>
+							<li><a href="https://github.com/dinhhieu1998" class="icon brands fa-github"><span class="label">GitHub</span></a></li></ul>
+							</section>
+						</section>
+					</footer>
+
+				<!-- Copyright -->
+					<div id="copyright">
+						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+					</div>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
