--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 					<div id="intro">
 						<h1>LE DINH HIEU<br />
 						Portfolio</h1>
-						<p>Data Analyst well versed in SQL, Python, Tableau, Power BI <a href="https://www.youtube.com/channel/UC7cs8q-gJRlGwj4A8OmCmXg">@AlexTheAnalyst</a>
+						<p>Data Analyst - SQL | Python | Tableau | Power BI | Excel</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
 					</div>
 
 
-				<!-- Nav -->
+				<!-- Nav --> | 
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
@@ -52,7 +52,7 @@
 									it in SQL Server to make it more usable for analysis.<br />
 									</p>
 								</header>
-								<a href="https://github.com/dinhhieu1998/PortfolioProjects/blob/main/Data%20Cleaning%20in%20SQL.sql" class="image main"><img src="images\covid19.png" alt="" /></a>
+								<a href="https://github.com/dinhhieu1998/PortfolioProjects/blob/main/Data%20Cleaning%20in%20SQL.sql" class="image main"><img src="https://raw.githubusercontent.com/dinhhieu1998/dinhhieudata/refs/heads/main/assets/images/covid19.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/dinhhieu1998/PortfolioProjects/blob/main/Data%20Cleaning%20in%20SQL.sql" class="button large">View Project</a></li>
 								</ul>
@@ -65,7 +65,7 @@
 										<h2><a href="#">COVID 19<br />
 										Data Exploration</a></h2>
 									</header>
-									<a href="https://github.com/AlexTheAnalyst/PortfolioProjects/blob/main/COVID%20Portfolio%20Project%20-%20Data%20Exploration.sql" class="image fit"><img src="images\covid19.png" alt="" /></a>
+									<a href="https://github.com/AlexTheAnalyst/PortfolioProjects/blob/main/COVID%20Portfolio%20Project%20-%20Data%20Exploration.sql" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu1998/dinhhieudata/refs/heads/main/assets/images/covid19.png" alt="" /></a>
 									<p>In this project we use SQL Server to explore global COVID 19 data. </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/AlexTheAnalyst/PortfolioProjects/blob/main/COVID%20Portfolio%20Project%20-%20Data%20Exploration.sql" class="button">View Project</a></li>
@@ -76,7 +76,7 @@
 										<h2><a href="#">Tableau Dashboards<br />
 										</a></h2>
 									</header>
-									<a href="https://public.tableau.com/profile/alexander.freberg#!/?newProfile=&activeTab=0" class="image fit"><img src="images\covid19.png" alt="" /></a>
+									<a href="https://public.tableau.com/profile/alexander.freberg#!/?newProfile=&activeTab=0" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu1998/dinhhieudata/refs/heads/main/assets/images/covid19.png" alt="" /></a>
 									<p>Tableau Dashboards for projects on COVID 19, Financial Forecasting, and Fantasy Football </p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/profile/alexander.freberg#!/?newProfile=&activeTab=0" class="button">View Project</a></li>
@@ -87,7 +87,8 @@
 										<h2><a href="#">Movie Correlation<br />
 										with Python</a></h2>
 									</header>
-									<a href="github link here" class="image fit"><img src="images\covid19.png" alt="" /></a>
+									<a href="github link here" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu1998/dinhhieudata/refs/heads/main/assets/images/covid19.png" alt="" /></a>
+									
 									<p>In this project we look at what variables effect the gross revenue from movies.</p>
 									<ul class="actions special">
 										<li><a href="github link here" class="button">View Project</a></li>
@@ -98,7 +99,7 @@
 										<h2><a href="#">Amazon Web Scraper<br />
 										with Python</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images\covid19.png" alt="" /></a>
+									<a href="#" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu1998/dinhhieudata/refs/heads/main/assets/images/covid19.png" alt="" /></a>
 									<p>In this project we scrape data from Amazon to analyze price data for products.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View Project</a></li>
