--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://www.facebook.com/ledinhhieu.roca" class="icon brands fa-linkedin"><span class="label">fa-linkedin</span></a></li>
+									<li><a href="https://www.linkedin.com/in/hi%E1%BA%BFu-l%C3%AA-6b0509196/"><span class="label">fa-linkedin</span></a></li>
 							<li><a href="https://github.com/dinhhieu1998" class="icon brands fa-github"><span class="label">GitHub</span></a></li></ul>
 							</section>
 						</section>
