--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 								
 								<article>
 									<header>
-										<h2><a href="#">COVID 19<br />
-										Data Exploration</a></h2>
+										<h2><a href="#">COVID 19 - Data Exploration <br />
+										</a></h2>
 									</header>
 									<a href="https://github.com/dinhhieu1998/PortfolioProjects/blob/main/Tableau_Portfolio_Project_Covid19_SQL.sql" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu1998/dinhhieudata/refs/heads/main/assets/images/covid.jpg" alt="" /></a>
 									<p>In this project we use SQL Server to explore global COVID 19 data. </p>
