--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 									<a href="https://github.com/dinhhieu1998/PortfolioProjects/blob/main/Tableau_Portfolio_Project_Covid19_SQL.sql" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu1998/dinhhieudata/refs/heads/main/assets/images/covid.jpg" alt="" /></a>
 									<p>In this project we use SQL Server to explore global COVID 19 data. </p>
 									<ul class="actions special">
-										<li><a href="https://github.com/AlexTheAnalyst/PortfolioProjects/blob/main/COVID%20Portfolio%20Project%20-%20Data%20Exploration.sql" class="button">View Project</a></li>
+										<li><a href="https://github.com/dinhhieu1998/PortfolioProjects/blob/main/Tableau_Portfolio_Project_Covid19_SQL.sql" class="button">View Project</a></li>
 									</ul>
 								</article>
 
