--- a/index.html
+++ b/index.html
@@ -116,15 +116,29 @@
 
 								<article>
 									<header>
-										<h2><a href="#">Road Accident<br />
+										<h2><a href="#">Road Accident with Tableau<br />
 										</a></h2>
 									</header>
-									<a href="https://public.tableau.com/app/profile/hieu.le.dinh/viz/CovidDashboardTutorial_updated/CovidDashboard" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu-data/portfolio/refs/heads/main/assets/images/RoadAccident.jpg" alt="" /></a>
-									<p>Tableau Dashboards for projects on COVID 19, Financial Forecasting, and Fantasy Football </p>
+									<a href="https://public.tableau.com/app/profile/hieu.le.dinh/viz/RoadAccident_Tab/RoadAccident_Dashboard?publish=yes" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu-data/portfolio/refs/heads/main/assets/images/RoadAccident.jpg" alt="" /></a>
+									<p>Tableau Dashboards for Road Accident, Financial Forecasting, and Fantasy Football </p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/hieu.le.dinh/viz/CovidDashboardTutorial_updated/CovidDashboard" class="button">View Project</a></li>
 									</ul>
 								</article>
+
+
+								<article>
+								<header>
+									<h2><a href="#">Road Accident with Power BI<br />
+									</a></h2>
+								</header>
+								<a href="https://github.com/dinhhieu-data/PortfolioProjects/blob/main/Road%20Accident_Power%20BI.pbix" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu-data/portfolio/refs/heads/main/assets/images/RoadAccident.jpg" alt="" /></a>
+								<p>Tableau Dashboards for Road Accident, Financial Forecasting, and Fantasy Football </p>
+								<ul class="actions special">
+									<li><a href="https://public.tableau.com/app/profile/hieu.le.dinh/viz/CovidDashboardTutorial_updated/CovidDashboard" class="button">View Project</a></li>
+								</ul>
+								</article>
+
 
 
 								
