--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 										<h2><a href="#">Road Accident with Tableau<br />
 										</a></h2>
 									</header>
-									<a href="https://public.tableau.com/app/profile/hieu.le.dinh/viz/RoadAccident_Tab/RoadAccident_Dashboard?publish=yes" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu-data/portfolio/refs/heads/main/assets/images/RoadAccident.jpg" alt="" /></a>
+									<a href="https://public.tableau.com/app/profile/hieu.le.dinh/viz/RoadAccident_Tab/RoadAccident_Dashboard?publish=yes" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu-data/portfolio/refs/heads/main/assets/images/road_accident_Tableau.jpg" alt="" /></a>
 									<p>Tableau Dashboards for Road Accident, Financial Forecasting, and Fantasy Football </p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/hieu.le.dinh/viz/CovidDashboardTutorial_updated/CovidDashboard" class="button">View Project</a></li>
@@ -132,7 +132,21 @@
 									<h2><a href="#">Road Accident with Power BI<br />
 									</a></h2>
 								</header>
-								<a href="https://github.com/dinhhieu-data/PortfolioProjects/blob/main/Road%20Accident_Power%20BI.pbix" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu-data/portfolio/refs/heads/main/assets/images/RoadAccident.jpg" alt="" /></a>
+								<a href="https://github.com/dinhhieu-data/PortfolioProjects/blob/main/Road%20Accident_Power%20BI.pbix" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu-data/portfolio/refs/heads/main/assets/images/road_accident_BI.jpg" alt="" /></a>
+								<p>Tableau Dashboards for Road Accident, Financial Forecasting, and Fantasy Football </p>
+								<ul class="actions special">
+									<li><a href="https://public.tableau.com/app/profile/hieu.le.dinh/viz/CovidDashboardTutorial_updated/CovidDashboard" class="button">View Project</a></li>
+								</ul>
+								</article>
+
+
+								
+								<article>
+								<header>
+									<h2><a href="#">Road Accident with SQL Server<br />
+									</a></h2>
+								</header>
+								<a href="https://github.com/dinhhieu-data/PortfolioProjects/blob/main/Road_accident_SQL%20server.sql" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu-data/portfolio/refs/heads/main/assets/images/road_accident_SQL.jpg" alt="" /></a>
 								<p>Tableau Dashboards for Road Accident, Financial Forecasting, and Fantasy Football </p>
 								<ul class="actions special">
 									<li><a href="https://public.tableau.com/app/profile/hieu.le.dinh/viz/CovidDashboardTutorial_updated/CovidDashboard" class="button">View Project</a></li>
