--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 									<a href="https://public.tableau.com/app/profile/hieu.le.dinh/viz/RoadAccident_Tab/RoadAccident_Dashboard?publish=yes" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu-data/portfolio/refs/heads/main/assets/images/road_accident_Tableau.jpg" alt="" /></a>
 									<p>Tableau Dashboards for Road Accident, Financial Forecasting, and Fantasy Football </p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/hieu.le.dinh/viz/CovidDashboardTutorial_updated/CovidDashboard" class="button">View Project</a></li>
+										<li><a href="https://public.tableau.com/app/profile/hieu.le.dinh/viz/RoadAccident_Tab/RoadAccident_Dashboard?publish=yes" class="button">View Project</a></li>
 									</ul>
 								</article>
 
@@ -135,7 +135,7 @@
 								<a href="https://github.com/dinhhieu-data/PortfolioProjects/blob/main/Road%20Accident_Power%20BI.pbix" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu-data/portfolio/refs/heads/main/assets/images/road_accident_BI.jpg" alt="" /></a>
 								<p>Tableau Dashboards for Road Accident, Financial Forecasting, and Fantasy Football </p>
 								<ul class="actions special">
-									<li><a href="https://public.tableau.com/app/profile/hieu.le.dinh/viz/CovidDashboardTutorial_updated/CovidDashboard" class="button">View Project</a></li>
+									<li><a href="https://github.com/dinhhieu-data/PortfolioProjects/blob/main/Road%20Accident_Power%20BI.pbix" class="button">View Project</a></li>
 								</ul>
 								</article>
 
@@ -149,7 +149,7 @@
 								<a href="https://github.com/dinhhieu-data/PortfolioProjects/blob/main/Road_accident_SQL%20server.sql" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu-data/portfolio/refs/heads/main/assets/images/road_accident_SQL.jpg" alt="" /></a>
 								<p>Tableau Dashboards for Road Accident, Financial Forecasting, and Fantasy Football </p>
 								<ul class="actions special">
-									<li><a href="https://public.tableau.com/app/profile/hieu.le.dinh/viz/CovidDashboardTutorial_updated/CovidDashboard" class="button">View Project</a></li>
+									<li><a href="https://github.com/dinhhieu-data/PortfolioProjects/blob/main/Road_accident_SQL%20server.sql" class="button">View Project</a></li>
 								</ul>
 								</article>
 
