--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/dinhhieu1998/PortfolioProjects/blob/main/Tableau_Portfolio_Project_Covid19_SQL.sql" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu1998/dinhhieudata/refs/heads/main/assets/images/covid.jpg" alt="" /></a>
-									<p>In this project we use SQL Server to explore global COVID 19 data. </p>
+									<p>Explored global COVID-19 datasets to uncover trends in infection and recovery rates over time. </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/dinhhieu1998/PortfolioProjects/blob/main/Tableau_Portfolio_Project_Covid19_SQL.sql" class="button">View Project</a></li>
 									</ul>
@@ -92,7 +92,7 @@
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/hieu.le.dinh/viz/CovidDashboardTutorial_updated/CovidDashboard" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu1998/dinhhieudata/refs/heads/main/assets/images/tableau.jpg" alt="" /></a>
-									<p>Tableau Dashboards for projects on COVID 19, Financial Forecasting, and Fantasy Football </p>
+									<p>Built interactive Tableau dashboards to visualize COVID-19 metrics across regions and demographics.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/hieu.le.dinh/viz/CovidDashboardTutorial_updated/CovidDashboard" class="button">View Project</a></li>
 									</ul>
@@ -120,7 +120,7 @@
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/hieu.le.dinh/viz/RoadAccident_Tab/RoadAccident_Dashboard?publish=yes" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu-data/portfolio/refs/heads/main/assets/images/road_accident_Tableau.jpg" alt="" /></a>
-									<p>Tableau Dashboards for Road Accident, Financial Forecasting, and Fantasy Football </p>
+									<p>Created a Tableau visualization to analyze road accident patterns and identify high-risk zones.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/hieu.le.dinh/viz/RoadAccident_Tab/RoadAccident_Dashboard?publish=yes" class="button">View Project</a></li>
 									</ul>
@@ -133,7 +133,7 @@
 									</a></h2>
 								</header>
 								<a href="https://github.com/dinhhieu-data/PortfolioProjects/blob/main/Road%20Accident_Power%20BI.pbix" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu-data/portfolio/refs/heads/main/assets/images/road_accident_BI.jpg" alt="" /></a>
-								<p>Tableau Dashboards for Road Accident, Financial Forecasting, and Fantasy Football </p>
+								<p>Developed a Power BI dashboard to monitor accident data and support safety-decision making.</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/dinhhieu-data/PortfolioProjects/blob/main/Road%20Accident_Power%20BI.pbix" class="button">View Project</a></li>
 								</ul>
@@ -147,7 +147,7 @@
 									</a></h2>
 								</header>
 								<a href="https://github.com/dinhhieu-data/PortfolioProjects/blob/main/Road_accident_SQL%20server.sql" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu-data/portfolio/refs/heads/main/assets/images/road_accident_SQL.jpg" alt="" /></a>
-								<p>Tableau Dashboards for Road Accident, Financial Forecasting, and Fantasy Football </p>
+								<p>Used SQL to query and clean road accident data, enabling detailed insight into causes and trends.</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/dinhhieu-data/PortfolioProjects/blob/main/Road_accident_SQL%20server.sql" class="button">View Project</a></li>
 								</ul>
