--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<div id="intro">
 						<h1>LE DINH HIEU<br />
 						Portfolio</h1>
-						<p>Data Analyst - SQL | Python | Tableau | Power BI | Excel</p>
+						<p>Data Analyst - SQL | Power BI | Python | Tableau | Excel</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
