--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@
 								
 								<article>
 								<header>
-									<h2><a href="https://github.com/dinhhieu-data/PortfolioProjects/blob/main/Road_accident_SQL%20server.sql">Road Accident with
-										SQL Server<br />
+									<h2><a href="https://github.com/dinhhieu-data/PortfolioProjects/blob/main/Dashboard_RoadAccident_excel">Dashboards Road Accident with
+										Excel<br />
 									</a></h2>
 								</header>
-								<a href="https://github.com/dinhhieu-data/PortfolioProjects/blob/main/Road_accident_SQL%20server.sql" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu-data/portfolio/refs/heads/main/assets/images/road_accident_SQL.jpg" alt="" /></a>
-								<p>Used SQL to query and clean road accident data, enabling detailed insight into causes and trends.</p>
+								<a href="https://github.com/dinhhieu-data/PortfolioProjects/blob/main/Dashboard_RoadAccident_excel" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu-data/portfolio/refs/heads/main/assets/images/road_accident_excel.jpg" alt="" /></a>
+								<p>Used Excel to clean road accident data, and built an Excel-based dashboard to understand causes and trends.</p>
 								<ul class="actions special">
-									<li><a href="https://github.com/dinhhieu-data/PortfolioProjects/blob/main/Road_accident_SQL%20server.sql" class="button">View Project</a></li>
+									<li><a href="https://github.com/dinhhieu-data/PortfolioProjects/blob/main/Dashboard_RoadAccident_excel" class="button">View Project</a></li>
 								</ul>
 								</article>
 
