--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@
 								
 								<article>
 								<header>
-									<h2><a href="https://github.com/dinhhieu-data/PortfolioProjects/blob/main/Dashboard_RoadAccident_excel">Dashboards Road Accident with
+									<h2><a href="https://docs.google.com/spreadsheets/d/1VzkYqgP0qB4vnzrLZr4SyJ_PXVWiQIel/edit?usp=sharing&ouid=102686051546297703566&rtpof=true&sd=true">Dashboards Road Accident with
 										Excel<br />
 									</a></h2>
 								</header>
-								<a href="https://github.com/dinhhieu-data/PortfolioProjects/blob/main/Dashboard_RoadAccident_excel" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu-data/portfolio/refs/heads/main/assets/images/road_accident_excel.jpg" alt="" /></a>
+								<a href="https://docs.google.com/spreadsheets/d/1VzkYqgP0qB4vnzrLZr4SyJ_PXVWiQIel/edit?usp=sharing&ouid=102686051546297703566&rtpof=true&sd=true" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu-data/portfolio/refs/heads/main/assets/images/road_accident_excel.jpg" alt="" /></a>
 								<p>Used Excel to clean road accident data, and built an Excel-based dashboard to understand causes and trends.</p>
 								<ul class="actions special">
-									<li><a href="https://github.com/dinhhieu-data/PortfolioProjects/blob/main/Dashboard_RoadAccident_excel" class="button">View Project</a></li>
+									<li><a href="https://docs.google.com/spreadsheets/d/1VzkYqgP0qB4vnzrLZr4SyJ_PXVWiQIel/edit?usp=sharing&ouid=102686051546297703566&rtpof=true&sd=true" class="button">View Project</a></li>
 								</ul>
 								</article>
 
