Update Power BI report links in index.html

--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
 
 								<article>
 								<header>
-									<h2><a href="https://app.powerbi.com/groups/me/reports/e6c0edf9-b77c-49b2-af23-a0f5303e2fc0/1850d3a6160cc9d538ad?experience=power-bi">Dashboards Road Accident with
+									<h2><a href="https://app.powerbi.com/view?r=eyJrIjoiYTMzNzc3Y2EtMjE5Ni00N2MyLWIxZGYtNWY2YjIwMDdhNmFkIiwidCI6IjVlOGIzMjY5LTc2Y2EtNDU3Yy04NDdmLTQ0NGUzZGI5ODZhNyIsImMiOjl9">Dashboards Road Accident with
 										Power BI<br />
 									</a></h2>
 								</header>
-								<a href="https://app.powerbi.com/groups/me/reports/e6c0edf9-b77c-49b2-af23-a0f5303e2fc0/1850d3a6160cc9d538ad?experience=power-bi" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu-data/portfolio/refs/heads/main/assets/images/road_accident_BI.jpg" alt="" /></a>
+								<a href="https://app.powerbi.com/view?r=eyJrIjoiYTMzNzc3Y2EtMjE5Ni00N2MyLWIxZGYtNWY2YjIwMDdhNmFkIiwidCI6IjVlOGIzMjY5LTc2Y2EtNDU3Yy04NDdmLTQ0NGUzZGI5ODZhNyIsImMiOjl9" class="image fit"><img src="https://raw.githubusercontent.com/dinhhieu-data/portfolio/refs/heads/main/assets/images/road_accident_BI.jpg" alt="" /></a>
 								<p>Developed a Power BI dashboard to monitor accident data and support safety-decision making.</p>
 								<ul class="actions special">
-									<li><a href="https://app.powerbi.com/groups/me/reports/e6c0edf9-b77c-49b2-af23-a0f5303e2fc0/1850d3a6160cc9d538ad?experience=power-bi" class="button">View Project</a></li>
+									<li><a href="https://app.powerbi.com/view?r=eyJrIjoiYTMzNzc3Y2EtMjE5Ni00N2MyLWIxZGYtNWY2YjIwMDdhNmFkIiwidCI6IjVlOGIzMjY5LTc2Y2EtNDU3Yy04NDdmLTQ0NGUzZGI5ODZhNyIsImMiOjl9" class="button">View Project</a></li>
 								</ul>
 								</article>
 
